Caching, docs update
